# mdata_flow

./: .gitignore  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  github-publish.yaml  publish.yaml  release.yaml
src/mdata_flow/: config.py  plots_lib.py  types.py
src/mdata_flow/datasets_manager/: composites.py  interfaces.py  manager.py
src/mdata_flow/datasets_manager/visitors/: __init__.py  cache_mover_visitor.py  count_by_category_report.py  csv_saver_visitor.py  data_quality_report.py  dataset_uploader_mlflow_visitor.py  evidently_report_visitor.py  figure_visitor.py  figures_uploader_mlflow_visitor.py  nested_results_visitor.py  preview_uploader_visitor.py  scoped_abs_info_uploader.py  xxh_digest_visitor.py
src/mdata_flow/datasets_manager/visitors/plotly/: plotly_boxplot_visitor.py  plotly_corr_visitor.py  plotly_density_visitor.py
src/mdata_flow/evidently_ext/: column_count_by_category.py
src/mdata_flow/evidently_ext/visitors/: count_by_category_report.py  data_quality_report.py  evidently_abs_report_visitor.py
src/mdata_flow/plotly_ext/: func_library.py
src/mdata_flow/plotly_ext/visitors/: plotly_boxplot_visitor.py
tests/: __main__.py  load.py
tests/datasets_manager/: composites.py
tests/datasets_manager/visitors/: conftest.py  test_cache_mover_visitor.py  test_dataset_uploader.py  test_dataset_uploader_mlflow_visitor.py  test_xxh_digest_visitor.py
