[project]
name = "mdata-flow"
version = "0.1.0"
description = ""
authors = [{ name = "INovikov Home", email = "nov.ilucha@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.11 <3.13"
dependencies = ["mlflow[databricks] (>=2.20.0,<3.0.0)", "pydantic-settings (>=2.8.1,<3.0.0)", "xxhash (>=3.5.0,<4.0.0)"]

[tool.poetry]
packages = [{ include = "mdata_flow", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
